# jitauth

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.test.yaml  docker-compose.yaml  findings-10.md  findings-11.md  findings-12.md  findings-13.md  findings-2.md  findings-3.md  findings-4.md  findings-5.md  findings-6.md  findings-7.md  findings-8.md  findings-9.md  findings.md  openapi.json  pyproject.toml
examples/: adapters.yaml  claude_mcp_config.json  quickstart.py
migrations/: env.py
migrations/versions/: 000_baseline_schema.py  001_v050_schema_hardening.py  002_v070_task_ownership.py
policies/: default.yaml
src/jitauth/: __init__.py  cli.py
src/jitauth/audit/: __init__.py  events.py  logger.py
src/jitauth/broker/: __init__.py  auth.py  middleware.py  routes.py  server.py
src/jitauth/config/: __init__.py  loader.py  settings.py
src/jitauth/core/: __init__.py  crypto.py  id.py  json_fields.py  models.py  schemas.py  tokens.py
src/jitauth/db/: __init__.py  session.py
src/jitauth/mcp/: __init__.py  server.py
src/jitauth/policy/: __init__.py  engine.py  risk.py
src/jitauth/proxy/: __init__.py  base.py  gateway.py
src/jitauth/proxy/adapters/: __init__.py  http.py  shell.py
src/jitauth/revocation/: __init__.py
src/jitauth/sdk/: __init__.py  client.py  decorators.py
tests/: conftest.py  test_audit.py  test_findings2.py  test_findings4.py  test_findings8.py  test_findings9.py  test_health.py  test_integration.py  test_mcp_server.py  test_postgres.py  test_proxy.py  test_sdk.py  test_security.py  test_shell_adapter.py  test_task_lifecycle.py  test_tokens.py
